Changed broker image to redis:alpine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     volumes:
     - ./configuration.lua:/home/user/configuration.lua
   broker:
-    image: redis
+    image: redis:alpine
