fix(content): make links configurable, register commands, enhance /id
- about.lua: use BOT_ADMINS[1] for owner ID instead of hardcoded value
- help.lua: read CHANNEL_URL, SUPPORT_URL, GITHUB_URL, DEV_URL from
  config with current values as defaults
- main.lua: register bot command menu on startup via set_my_commands,
  with separate admin-scoped command list for group administrators
- id.lua: add premium status, profile photo count, bot flag, forum
  status, linked chat, hidden members, and anti-spam fields
- .env.example: add new optional config keys for bot links

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,12 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPAMWATCH_TOKEN=
 
+# Bot links (optional, defaults shown)
+CHANNEL_URL=https://t.me/mattata
+SUPPORT_URL=https://t.me/mattataSupport
+GITHUB_URL=https://github.com/wrxck/mattata
+DEV_URL=https://t.me/mattataDev
+
 # Logging
 LOG_CHAT=
 DEBUG=false
