feat(github): rewrite plugin with OAuth Device Flow and full GitHub integration
Replace the minimal repo-info-only GitHub plugin with a full integration
supporting OAuth Device Flow authentication, 11 subcommands (login, logout,
me, repos, issues, issue, starred, star, unstar, notifications), paginated
list views with callback query navigation, and cron-based auth polling.

--- a/.env.example
+++ b/.env.example
@@ -41,6 +41,8 @@ SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPAMWATCH_TOKEN=
 TENOR_API_KEY=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 # Bot links (optional, defaults shown)
 CHANNEL_URL=https://t.me/mattata
